[tool.poetry]
name = "mplbasketball"
version = "1.0.0"
description = "A Python plotting library to facilitate visualization of basketball data."
authors = ["Sreekar Voleti <sreekar.voleti@mlse.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "*"
matplotlib = "*"

[tool.poetry.dev-dependencies]
pytest = "7.4.2"
pytest-mpl = "0.17.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
